--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue3-perfect-scrollbar": "^1.6.0",
     "vue3-toastify": "^0.1.6",
     "vuetify": "3.0.0-beta.11",
+    "vuex": "^4.1.0",
     "webfontloader": "^1.6.28",
     "xlsx": "^0.18.5"
   },
