--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:icons": "node src/@iconify/build-icons.js"
   },
   "dependencies": {
+    "@babel/helper-split-export-declaration": "^7.22.6",
     "@casl/ability": "^6.2.0",
     "@casl/vue": "^2.2.0",
     "@floating-ui/dom": "1.0.0",
