--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_URL=https://backend.zahertaher.com/api/v1
+# VITE_API_URL=https://backend.zahertaher.com/api/v1
 # VITE_API_URL=https://backend.karimmsp.com/api/v1
 
-# VITE_API_URL=http://localhost:8000/api/v1
+VITE_API_URL=http://localhost:8000/api/v1
 VITE_PORT=3000
